lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> keywords
Rule 3     keywords -> keyword
Rule 4     keywords -> keywords keyword
Rule 5     keyword -> keyword_if
Rule 6     keyword -> keyword_for
Rule 7     keyword -> keyword_while
Rule 8     keyword -> keyword_return ;
Rule 9     keyword -> keyword_assign ;
Rule 10    keyword -> keyword_print ;
Rule 11    keyword -> break ;
Rule 12    keyword -> continue ;
Rule 13    keyword -> { keywords }
Rule 14    keyword_if -> IF ( expr ) keyword
Rule 15    keyword_if -> IF ( expr ) keyword ELSE keyword
Rule 16    keyword_return -> RETURN
Rule 17    keyword_return -> RETURN expr
Rule 18    keyword_for -> FOR id = expr : expr keyword
Rule 19    keyword_while -> WHILE ( expr ) keyword
Rule 20    break -> BREAK
Rule 21    continue -> CONTINUE
Rule 22    str -> STRING
Rule 23    keyword_print -> PRINT printables
Rule 24    printables -> printable
Rule 25    printables -> printables , printable
Rule 26    printable -> expr
Rule 27    printable -> str
Rule 28    keyword_assign -> assignable = expr
Rule 29    keyword_assign -> assignable ADDASSIGN expr
Rule 30    keyword_assign -> assignable SUBASSIGN expr
Rule 31    keyword_assign -> assignable MULASSIGN expr
Rule 32    keyword_assign -> assignable DIVASSIGN expr
Rule 33    id -> ID
Rule 34    assignable -> id
Rule 35    assignable -> matrix_element
Rule 36    assignable -> vector_element
Rule 37    expr -> expr '
Rule 38    expr -> ( expr )
Rule 39    expr -> matrix_create ( expr )
Rule 40    expr -> - expr
Rule 41    expr -> assignable
Rule 42    expr -> matrix
Rule 43    expr -> INTNUM
Rule 44    expr -> FLOAT
Rule 45    expr -> expr + expr
Rule 46    expr -> expr - expr
Rule 47    expr -> expr * expr
Rule 48    expr -> expr / expr
Rule 49    expr -> expr DOTADD expr
Rule 50    expr -> expr DOTSUB expr
Rule 51    expr -> expr DOTMUL expr
Rule 52    expr -> expr DOTDIV expr
Rule 53    expr -> expr > expr
Rule 54    expr -> expr < expr
Rule 55    expr -> expr EQ expr
Rule 56    expr -> expr NEQ expr
Rule 57    expr -> expr LEQ expr
Rule 58    expr -> expr GEQ expr
Rule 59    matrix -> [ vectors ]
Rule 60    matrix_create -> ZEROS
Rule 61    matrix_create -> ONES
Rule 62    matrix_create -> EYE
Rule 63    matrix_element -> id [ INTNUM , INTNUM ]
Rule 64    vectors -> vectors , vector
Rule 65    vectors -> vector
Rule 66    vector -> [ variables ]
Rule 67    vector_element -> id [ INTNUM ]
Rule 68    variables -> variables , variable
Rule 69    variables -> variable
Rule 70    variable -> INTNUM
Rule 71    variable -> FLOAT
Rule 72    variable -> assignable

Terminals, with rules where they appear

'                    : 37
(                    : 14 15 19 38 39
)                    : 14 15 19 38 39
*                    : 47
+                    : 45
,                    : 25 63 64 68
-                    : 40 46
/                    : 48
:                    : 18
;                    : 8 9 10 11 12
<                    : 54
=                    : 18 28
>                    : 53
ADDASSIGN            : 29
BREAK                : 20
CONTINUE             : 21
DIVASSIGN            : 32
DOTADD               : 49
DOTDIV               : 52
DOTMUL               : 51
DOTSUB               : 50
ELSE                 : 15
EQ                   : 55
EYE                  : 62
FLOAT                : 44 71
FOR                  : 18
GEQ                  : 58
ID                   : 33
IF                   : 14 15
INTNUM               : 43 63 63 67 70
LEQ                  : 57
MULASSIGN            : 31
NEQ                  : 56
ONES                 : 61
PRINT                : 23
RETURN               : 16 17
STRING               : 22
SUBASSIGN            : 30
WHILE                : 19
ZEROS                : 60
[                    : 59 63 66 67
]                    : 59 63 66 67
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

assignable           : 28 29 30 31 32 41 72
break                : 11
continue             : 12
expr                 : 14 15 17 18 18 19 26 28 29 30 31 32 37 38 39 40 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58
id                   : 18 34 63 67
keyword              : 3 4 14 15 15 18 19
keyword_assign       : 9
keyword_for          : 6
keyword_if           : 5
keyword_print        : 10
keyword_return       : 8
keyword_while        : 7
keywords             : 2 4 13
matrix               : 42
matrix_create        : 39
matrix_element       : 35
printable            : 24 25
printables           : 23 25
start                : 0
str                  : 27
variable             : 68 69
variables            : 66 68
vector               : 64 65
vector_element       : 36
vectors              : 59 64

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . keywords
    (3) keywords -> . keyword
    (4) keywords -> . keywords keyword
    (5) keyword -> . keyword_if
    (6) keyword -> . keyword_for
    (7) keyword -> . keyword_while
    (8) keyword -> . keyword_return ;
    (9) keyword -> . keyword_assign ;
    (10) keyword -> . keyword_print ;
    (11) keyword -> . break ;
    (12) keyword -> . continue ;
    (13) keyword -> . { keywords }
    (14) keyword_if -> . IF ( expr ) keyword
    (15) keyword_if -> . IF ( expr ) keyword ELSE keyword
    (18) keyword_for -> . FOR id = expr : expr keyword
    (19) keyword_while -> . WHILE ( expr ) keyword
    (16) keyword_return -> . RETURN
    (17) keyword_return -> . RETURN expr
    (28) keyword_assign -> . assignable = expr
    (29) keyword_assign -> . assignable ADDASSIGN expr
    (30) keyword_assign -> . assignable SUBASSIGN expr
    (31) keyword_assign -> . assignable MULASSIGN expr
    (32) keyword_assign -> . assignable DIVASSIGN expr
    (23) keyword_print -> . PRINT printables
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (34) assignable -> . id
    (35) assignable -> . matrix_element
    (36) assignable -> . vector_element
    (33) id -> . ID
    (63) matrix_element -> . id [ INTNUM , INTNUM ]
    (67) vector_element -> . id [ INTNUM ]

    $end            reduce using rule 1 (start -> .)
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    start                          shift and go to state 1
    keywords                       shift and go to state 2
    keyword                        shift and go to state 3
    keyword_if                     shift and go to state 4
    keyword_for                    shift and go to state 5
    keyword_while                  shift and go to state 6
    keyword_return                 shift and go to state 7
    keyword_assign                 shift and go to state 8
    keyword_print                  shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 1

    (0) S' -> start .



state 2

    (2) start -> keywords .
    (4) keywords -> keywords . keyword
    (5) keyword -> . keyword_if
    (6) keyword -> . keyword_for
    (7) keyword -> . keyword_while
    (8) keyword -> . keyword_return ;
    (9) keyword -> . keyword_assign ;
    (10) keyword -> . keyword_print ;
    (11) keyword -> . break ;
    (12) keyword -> . continue ;
    (13) keyword -> . { keywords }
    (14) keyword_if -> . IF ( expr ) keyword
    (15) keyword_if -> . IF ( expr ) keyword ELSE keyword
    (18) keyword_for -> . FOR id = expr : expr keyword
    (19) keyword_while -> . WHILE ( expr ) keyword
    (16) keyword_return -> . RETURN
    (17) keyword_return -> . RETURN expr
    (28) keyword_assign -> . assignable = expr
    (29) keyword_assign -> . assignable ADDASSIGN expr
    (30) keyword_assign -> . assignable SUBASSIGN expr
    (31) keyword_assign -> . assignable MULASSIGN expr
    (32) keyword_assign -> . assignable DIVASSIGN expr
    (23) keyword_print -> . PRINT printables
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (34) assignable -> . id
    (35) assignable -> . matrix_element
    (36) assignable -> . vector_element
    (33) id -> . ID
    (63) matrix_element -> . id [ INTNUM , INTNUM ]
    (67) vector_element -> . id [ INTNUM ]

    $end            reduce using rule 2 (start -> keywords .)
    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    keyword                        shift and go to state 25
    keyword_if                     shift and go to state 4
    keyword_for                    shift and go to state 5
    keyword_while                  shift and go to state 6
    keyword_return                 shift and go to state 7
    keyword_assign                 shift and go to state 8
    keyword_print                  shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 3

    (3) keywords -> keyword .

    {               reduce using rule 3 (keywords -> keyword .)
    IF              reduce using rule 3 (keywords -> keyword .)
    FOR             reduce using rule 3 (keywords -> keyword .)
    WHILE           reduce using rule 3 (keywords -> keyword .)
    RETURN          reduce using rule 3 (keywords -> keyword .)
    PRINT           reduce using rule 3 (keywords -> keyword .)
    BREAK           reduce using rule 3 (keywords -> keyword .)
    CONTINUE        reduce using rule 3 (keywords -> keyword .)
    ID              reduce using rule 3 (keywords -> keyword .)
    $end            reduce using rule 3 (keywords -> keyword .)
    }               reduce using rule 3 (keywords -> keyword .)


state 4

    (5) keyword -> keyword_if .

    {               reduce using rule 5 (keyword -> keyword_if .)
    IF              reduce using rule 5 (keyword -> keyword_if .)
    FOR             reduce using rule 5 (keyword -> keyword_if .)
    WHILE           reduce using rule 5 (keyword -> keyword_if .)
    RETURN          reduce using rule 5 (keyword -> keyword_if .)
    PRINT           reduce using rule 5 (keyword -> keyword_if .)
    BREAK           reduce using rule 5 (keyword -> keyword_if .)
    CONTINUE        reduce using rule 5 (keyword -> keyword_if .)
    ID              reduce using rule 5 (keyword -> keyword_if .)
    $end            reduce using rule 5 (keyword -> keyword_if .)
    }               reduce using rule 5 (keyword -> keyword_if .)
    ELSE            reduce using rule 5 (keyword -> keyword_if .)


state 5

    (6) keyword -> keyword_for .

    {               reduce using rule 6 (keyword -> keyword_for .)
    IF              reduce using rule 6 (keyword -> keyword_for .)
    FOR             reduce using rule 6 (keyword -> keyword_for .)
    WHILE           reduce using rule 6 (keyword -> keyword_for .)
    RETURN          reduce using rule 6 (keyword -> keyword_for .)
    PRINT           reduce using rule 6 (keyword -> keyword_for .)
    BREAK           reduce using rule 6 (keyword -> keyword_for .)
    CONTINUE        reduce using rule 6 (keyword -> keyword_for .)
    ID              reduce using rule 6 (keyword -> keyword_for .)
    $end            reduce using rule 6 (keyword -> keyword_for .)
    }               reduce using rule 6 (keyword -> keyword_for .)
    ELSE            reduce using rule 6 (keyword -> keyword_for .)


state 6

    (7) keyword -> keyword_while .

    {               reduce using rule 7 (keyword -> keyword_while .)
    IF              reduce using rule 7 (keyword -> keyword_while .)
    FOR             reduce using rule 7 (keyword -> keyword_while .)
    WHILE           reduce using rule 7 (keyword -> keyword_while .)
    RETURN          reduce using rule 7 (keyword -> keyword_while .)
    PRINT           reduce using rule 7 (keyword -> keyword_while .)
    BREAK           reduce using rule 7 (keyword -> keyword_while .)
    CONTINUE        reduce using rule 7 (keyword -> keyword_while .)
    ID              reduce using rule 7 (keyword -> keyword_while .)
    $end            reduce using rule 7 (keyword -> keyword_while .)
    }               reduce using rule 7 (keyword -> keyword_while .)
    ELSE            reduce using rule 7 (keyword -> keyword_while .)


state 7

    (8) keyword -> keyword_return . ;

    ;               shift and go to state 26


state 8

    (9) keyword -> keyword_assign . ;

    ;               shift and go to state 27


state 9

    (10) keyword -> keyword_print . ;

    ;               shift and go to state 28


state 10

    (11) keyword -> break . ;

    ;               shift and go to state 29


state 11

    (12) keyword -> continue . ;

    ;               shift and go to state 30


state 12

    (13) keyword -> { . keywords }
    (3) keywords -> . keyword
    (4) keywords -> . keywords keyword
    (5) keyword -> . keyword_if
    (6) keyword -> . keyword_for
    (7) keyword -> . keyword_while
    (8) keyword -> . keyword_return ;
    (9) keyword -> . keyword_assign ;
    (10) keyword -> . keyword_print ;
    (11) keyword -> . break ;
    (12) keyword -> . continue ;
    (13) keyword -> . { keywords }
    (14) keyword_if -> . IF ( expr ) keyword
    (15) keyword_if -> . IF ( expr ) keyword ELSE keyword
    (18) keyword_for -> . FOR id = expr : expr keyword
    (19) keyword_while -> . WHILE ( expr ) keyword
    (16) keyword_return -> . RETURN
    (17) keyword_return -> . RETURN expr
    (28) keyword_assign -> . assignable = expr
    (29) keyword_assign -> . assignable ADDASSIGN expr
    (30) keyword_assign -> . assignable SUBASSIGN expr
    (31) keyword_assign -> . assignable MULASSIGN expr
    (32) keyword_assign -> . assignable DIVASSIGN expr
    (23) keyword_print -> . PRINT printables
    (20) break -> . BREAK
    (21) continue -> . CONTINUE
    (34) assignable -> . id
    (35) assignable -> . matrix_element
    (36) assignable -> . vector_element
    (33) id -> . ID
    (63) matrix_element -> . id [ INTNUM , INTNUM ]
    (67) vector_element -> . id [ INTNUM ]

    {               shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    ID              shift and go to state 24

    keywords                       shift and go to state 31
    keyword                        shift and go to state 3
    keyword_if                     shift and go to state 4
    keyword_for                    shift and go to state 5
    keyword_while                  shift and go to state 6
    keyword_return                 shift and go to state 7
    keyword_assign                 shift and go to state 8
    keyword_print                  shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    id                             shift and go to state 15
    assignable                     shift and go to state 18
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 13

    (14) keyword_if -> IF . ( expr ) keyword
    (15) keyword_if -> IF . ( expr ) keyword ELSE keyword

    (               shift and go to state 32


state 14

    (18) keyword_for -> FOR . id = expr : expr keyword
    (33) id -> . ID

    ID              shift and go to state 24

    id                             shift and go to state 33

state 15

    (34) assignable -> id .
    (63) matrix_element -> id . [ INTNUM , INTNUM ]
    (67) vector_element -> id . [ INTNUM ]

    =               reduce using rule 34 (assignable -> id .)
    ADDASSIGN       reduce using rule 34 (assignable -> id .)
    SUBASSIGN       reduce using rule 34 (assignable -> id .)
    MULASSIGN       reduce using rule 34 (assignable -> id .)
    DIVASSIGN       reduce using rule 34 (assignable -> id .)
    '               reduce using rule 34 (assignable -> id .)
    +               reduce using rule 34 (assignable -> id .)
    -               reduce using rule 34 (assignable -> id .)
    *               reduce using rule 34 (assignable -> id .)
    /               reduce using rule 34 (assignable -> id .)
    DOTADD          reduce using rule 34 (assignable -> id .)
    DOTSUB          reduce using rule 34 (assignable -> id .)
    DOTMUL          reduce using rule 34 (assignable -> id .)
    DOTDIV          reduce using rule 34 (assignable -> id .)
    >               reduce using rule 34 (assignable -> id .)
    <               reduce using rule 34 (assignable -> id .)
    EQ              reduce using rule 34 (assignable -> id .)
    NEQ             reduce using rule 34 (assignable -> id .)
    LEQ             reduce using rule 34 (assignable -> id .)
    GEQ             reduce using rule 34 (assignable -> id .)
    ;               reduce using rule 34 (assignable -> id .)
    ,               reduce using rule 34 (assignable -> id .)
    )               reduce using rule 34 (assignable -> id .)
    :               reduce using rule 34 (assignable -> id .)
    {               reduce using rule 34 (assignable -> id .)
    IF              reduce using rule 34 (assignable -> id .)
    FOR             reduce using rule 34 (assignable -> id .)
    WHILE           reduce using rule 34 (assignable -> id .)
    RETURN          reduce using rule 34 (assignable -> id .)
    PRINT           reduce using rule 34 (assignable -> id .)
    BREAK           reduce using rule 34 (assignable -> id .)
    CONTINUE        reduce using rule 34 (assignable -> id .)
    ID              reduce using rule 34 (assignable -> id .)
    ]               reduce using rule 34 (assignable -> id .)
    [               shift and go to state 34


state 16

    (19) keyword_while -> WHILE . ( expr ) keyword

    (               shift and go to state 35


state 17

    (16) keyword_return -> RETURN .
    (17) keyword_return -> RETURN . expr
    (37) expr -> . expr '
    (38) expr -> . ( expr )
    (39) expr -> . matrix_create ( expr )
    (40) expr -> . - expr
    (41) expr -> . assignable
    (42) expr -> . matrix
    (43) expr -> . INTNUM
    (44) expr -> . FLOAT
    (45) expr -> . expr + expr
    (46) expr -> . expr - expr
    (47) expr -> . expr * expr
    (48) expr -> . expr / expr
    (49) expr -> . expr DOTADD expr
    (50) expr -> . expr DOTSUB expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr > expr
    (54) expr -> . expr < expr
    (55) expr -> . expr EQ expr
    (56) expr -> . expr NEQ expr
    (57) expr -> . expr LEQ expr
    (58) expr -> . expr GEQ expr
    (60) matrix_create -> . ZEROS
    (61) matrix_create -> . ONES
    (62) matrix_create -> . EYE
    (34) assignable -> . id
    (35) assignable -> . matrix_element
    (36) assignable -> . vector_element
    (59) matrix -> . [ vectors ]
    (33) id -> . ID
    (63) matrix_element -> . id [ INTNUM , INTNUM ]
    (67) vector_element -> . id [ INTNUM ]

    ;               reduce using rule 16 (keyword_return -> RETURN .)
    (               shift and go to state 37
    -               shift and go to state 39
    INTNUM          shift and go to state 42
    FLOAT           shift and go to state 43
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    [               shift and go to state 47
    ID              shift and go to state 24

    expr                           shift and go to state 36
    matrix_create                  shift and go to state 38
    assignable                     shift and go to state 40
    matrix                         shift and go to state 41
    id                             shift and go to state 15
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 18

    (28) keyword_assign -> assignable . = expr
    (29) keyword_assign -> assignable . ADDASSIGN expr
    (30) keyword_assign -> assignable . SUBASSIGN expr
    (31) keyword_assign -> assignable . MULASSIGN expr
    (32) keyword_assign -> assignable . DIVASSIGN expr

    =               shift and go to state 48
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 51
    DIVASSIGN       shift and go to state 52


state 19

    (23) keyword_print -> PRINT . printables
    (24) printables -> . printable
    (25) printables -> . printables , printable
    (26) printable -> . expr
    (27) printable -> . str
    (37) expr -> . expr '
    (38) expr -> . ( expr )
    (39) expr -> . matrix_create ( expr )
    (40) expr -> . - expr
    (41) expr -> . assignable
    (42) expr -> . matrix
    (43) expr -> . INTNUM
    (44) expr -> . FLOAT
    (45) expr -> . expr + expr
    (46) expr -> . expr - expr
    (47) expr -> . expr * expr
    (48) expr -> . expr / expr
    (49) expr -> . expr DOTADD expr
    (50) expr -> . expr DOTSUB expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr > expr
    (54) expr -> . expr < expr
    (55) expr -> . expr EQ expr
    (56) expr -> . expr NEQ expr
    (57) expr -> . expr LEQ expr
    (58) expr -> . expr GEQ expr
    (22) str -> . STRING
    (60) matrix_create -> . ZEROS
    (61) matrix_create -> . ONES
    (62) matrix_create -> . EYE
    (34) assignable -> . id
    (35) assignable -> . matrix_element
    (36) assignable -> . vector_element
    (59) matrix -> . [ vectors ]
    (33) id -> . ID
    (63) matrix_element -> . id [ INTNUM , INTNUM ]
    (67) vector_element -> . id [ INTNUM ]

    (               shift and go to state 37
    -               shift and go to state 39
    INTNUM          shift and go to state 42
    FLOAT           shift and go to state 43
    STRING          shift and go to state 57
    ZEROS           shift and go to state 44
    ONES            shift and go to state 45
    EYE             shift and go to state 46
    [               shift and go to state 47
    ID              shift and go to state 24

    printables                     shift and go to state 53
    printable                      shift and go to state 54
    expr                           shift and go to state 55
    str                            shift and go to state 56
    matrix_create                  shift and go to state 38
    assignable                     shift and go to state 40
    matrix                         shift and go to state 41
    id                             shift and go to state 15
    matrix_element                 shift and go to state 22
    vector_element                 shift and go to state 23

state 20

    (20) break -> BREAK .

    ;               reduce using rule 20 (break -> BREAK .)


state 21

    (21) continue -> CONTINUE .

    ;               reduce using rule 21 (continue -> CONTINUE .)


state 22

    (35) assignable -> matrix_element .

    =               reduce using rule 35 (assignable -> matrix_element .)
    ADDASSIGN       reduce using rule 35 (assignable -> matrix_element .)
    SUBASSIGN       reduce using rule 35 (assignable -> matrix_element .)
    MULASSIGN       reduce using rule 35 (assignable -> matrix_element .)
    DIVASSIGN       reduce using rule 35 (assignable -> matrix_element .)
    '               reduce using rule 35 (assignable -> matrix_element .)
    +               reduce using rule 35 (assignable -> matrix_element .)
    -               reduce using rule 35 (assignable -> matrix_element .)
    *               reduce using rule 35 (assignable -> matrix_element .)
    /               reduce using rule 35 (assignable -> matrix_element .)
    DOTADD          reduce using rule 35 (assignable -> matrix_element .)
    DOTSUB          reduce using rule 35 (assignable -> matrix_element .)
    DOTMUL          reduce using rule 35 (assignable -> matrix_element .)
    DOTDIV          reduce using rule 35 (assignable -> matrix_element .)
    >               reduce using rule 35 (assignable -> matrix_element .)
    <               reduce using rule 35 (assignable -> matrix_element .)
    EQ              reduce using rule 35 (assignable -> matrix_element .)
    NEQ             reduce using rule 35 (assignable -> matrix_element .)
    LEQ             reduce using rule 35 (assignable -> matrix_element .)
    GEQ             reduce using rule 35 (assignable -> matrix_element .)
    ;               reduce using rule 35 (assignable -> matrix_element .)
    ,               reduce using rule 35 (assignable -> matrix_element .)
    )               reduce using rule 35 (assignable -> matrix_element .)
    :               reduce using rule 35 (assignable -> matrix_element .)
    {               reduce using rule 35 (assignable -> matrix_element .)
    IF              reduce using rule 35 (assignable -> matrix_element .)
    FOR             reduce using rule 35 (assignable -> matrix_element .)
    WHILE           reduce using rule 35 (assignable -> matrix_element .)
    RETURN          reduce using rule 35 (assignable -> matrix_element .)
    PRINT           reduce using rule 35 (assignable -> matrix_element .)
    BREAK           reduce using rule 35 (assignable -> matrix_element .)
    CONTINUE        reduce using rule 35 (assignable -> matrix_element .)
    ID              reduce using rule 35 (assignable -> matrix_element .)
    ]               reduce using rule 35 (assignable -> matrix_element .)


state 23

    (36) assignable -> vector_element .

    =               reduce using rule 36 (assignable -> vector_element .)
    ADDASSIGN       reduce using rule 36 (assignable -> vector_element .)
    SUBASSIGN       reduce using rule 36 (assignable -> vector_element .)
    MULASSIGN       reduce using rule 36 (assignable -> vector_element .)
    DIVASSIGN       reduce using rule 36 (assignable -> vector_element .)
    '               reduce using rule 36 (assignable -> vector_element .)
    +               reduce using rule 36 (assignable -> vector_element .)
    -               reduce using rule 36 (assignable -> vector_element .)
    *               reduce using rule 36 (assignable -> vector_element .)
    /               reduce using rule 36 (assignable -> vector_element .)
    DOTADD          reduce using rule 36 (assignable -> vector_element .)
    DOTSUB          reduce using rule 36 (assignable -> vector_element .)
    DOTMUL          reduce using rule 36 (assignable -> vector_element .)
    DOTDIV          reduce using rule 36 (assignable -> vector_element .)
    >               reduce using rule 36 (assignable -> vector_element .)
    <               reduce using rule 36 (assignable -> vector_element .)
    EQ              reduce using rule 36 (assignable -> vector_element .)
    NEQ             reduce using rule 36 (assignable -> vector_element .)
    LEQ             reduce using rule 36 (assignable -> vector_element .)
    GEQ             reduce using rule 36 (assignable -> vector_element .)
    ;               reduce using rule 36 (assignable -> vector_element .)
    ,               reduce using rule 36 (assignable -> vector_element .)
    )               reduce using rule 36 (assignable -> vector_element .)
    :               reduce using rule 36 (assignable -> vector_element .)
    {               reduce using rule 36 (assignable -> vector_element .)
    IF              reduce using rule 36 (assignable -> vector_element .)
    FOR             reduce using rule 36 (assignable -> vector_element .)
    WHILE           reduce using rule 36 (assignable -> vector_element .)
    RETURN          reduce using rule 36 (assignable -> vector_element .)
    PRINT           reduce using rule 36 (assignable -> vector_element .)
    BREAK           reduce using rule 36 (assignable -> vector_element .)
    CONTINUE        reduce using rule 36 (assignable -> vector_element .)
    ID              reduce using rule 36 (assignable -> vector_element .)
    ]               reduce using rule 36 (assignable -> vector_element .)


state 24

    (33) id -> ID .
